<resources>
    <string name="app_name" translatable="false">Bootcamp</string>
    <string name="have_troubles">We have some troubles. Try later</string>
    <string name="no_internet">No internet connection</string>
    <string name="give_cellular_access_from_settings">Give access to use cellular data from settings</string>
    <string name="check_network">"Please check your network!"</string>
    <string name="warning">Warning</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="check_internet_connection">Please, check your internet connection</string>
    <string name="unauthorizedRequest">Unauthorized Request</string>
    <string name="login">Login</string>
    <string name="mobile_number">Mobile number</string>
    <string name="mobile_number_with_994">+994 Mobile number</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or">OR</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="e_vekil_version">Legalist version</string>
    <string name="re_send_the_code">Re-send the code</string>
    <string name="enter_the_one_time_code_sent_via_sms">Enter the one-time code sent via SMS</string>
    <string name="the_code_was_sent_to">The code was sent to</string>
    <string name="doesn_t_this_number_belong_to_you">Doesn\'t this number belong to you?</string>
    <string name="skip">Skip</string>
    <string name="setUpPinTitle">Set a PIN to access the application</string>
    <string name="setupPinInfo">Having a PIN makes it safe to access your account</string>
    <string name="dashboard">Dashboard</string>
    <string name="calendar">Calendar</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="find_lawyers_in_categories_title">Find %1s lawyers in\n%2s categories</string>
    <string name="find_lawyers_title">Find %1s lawyers</string>
    <string name="find_and_book_a_great_experience">Find and book a great experience.</string>
    <string name="start_your_search">Start your search</string>
    <string name="upcoming_bookings">Upcoming bookings</string>
    <string name="meeting_will_start">meeting will start</string>
    <string name="join">Join</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="categories">Categories</string>
    <string name="dot">&#8226;</string>
    <string name="most_rated_lawyers">Most rated lawyers</string>
    <string name="latest_seen">Latest seen</string>
    <string name="book">Book</string>
    <string name="more_info">More info</string>
    <string name="type_something_for_search">Type something for search…</string>
    <string name="results">Results</string>
    <string name="sort_by">Sort by</string>
    <string name="filters">Filters</string>
    <string name="all">All</string>
    <string name="price_high_to_low">Price high to low</string>
    <string name="price_low_to_high">Price low to high</string>
    <string name="clear_all">Clear all</string>
    <string name="category">Category</string>
    <string name="subcategory">Subcategory</string>
    <string name="service_type">Service type</string>
    <string name="chat_only">Chat only</string>
    <string name="audio_call">Audio call</string>
    <string name="video_call">Video call</string>
    <string name="price">Price</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="rating">Rating</string>
    <string name="_5_stars">5 stars</string>
    <string name="_4_stars">4 stars</string>
    <string name="_3_stars">3 stars</string>
    <string name="_2_stars">2 stars</string>
    <string name="_1_star">1 star</string>
    <string name="experience">Experience</string>
    <string name="_10_years">10+ years</string>
    <string name="_6_9_years">6–9 years</string>
    <string name="_3_6_years">3–6 years</string>
    <string name="_1_2_years">1–2 years</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select">Select</string>
    <string name="error">Error</string>
    <string name="apply_filters">Apply filters</string>
    <string name="clear_all_filters">Clear all filters</string>
    <string name="azn">AZN</string>
    <string name="notifications">Notifications</string>
    <string name="booking_detail">Booking detail</string>
    <string name="request_detail">Request detail:</string>
    <string name="date">Date</string>
    <string name="hours">Hours</string>
    <string name="service">Service</string>
    <string name="payment_method">Payment method</string>
    <string name="documents_attached">Documents attached</string>
    <string name="accept_meeting">Accept meeting</string>
    <string name="rate_lawyer">Rate lawyer</string>
    <string name="how_was_your_experience">How was your experience?</string>
    <string name="your_review_about">Your review about</string>
    <string name="share_your_thoughts">Share your thoughts</string>
    <string name="post_it">Post it</string>
    <string name="close">Close</string>
    <string name="congrats">Congrats!</string>
    <string name="successfully_added_review_for">You have successfully add a review for</string>
    <string name="services">Services</string>
    <string name="reviews">Reviews</string>
    <string name="experiences">Experiences</string>
    <string name="_30_mins">30 mins</string>
    <string name="_15_mins">15 mins</string>
    <string name="_60_mins">60 mins</string>
    <string name="like">Like</string>
    <string name="reply">Reply</string>
    <string name="see_certification">See certification</string>
    <string name="received">Received</string>
    <string name="provided">Provided</string>
    <string name="login_and_security">Login and Security</string>
    <string name="faq">F.A.Q</string>
    <string name="language">Language</string>
    <string name="log_out">Log out</string>
    <string name="az">Azerbaijan</string>
    <string name="en">English</string>
    <string name="ru">Russian</string>
    <string name="personal_information">Personal information</string>
    <string name="profile_info">Profile info</string>
    <string name="update_avatar">Update avatar</string>
    <string name="delete_avatar">Delete avatar</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">E-mail</string>
    <string name="update_profile">Update profile</string>
    <string name="password">Password</string>
    <string name="update">Update</string>
    <string name="pin">Pin</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="device_history">Device history</string>
    <string name="current_session">Current session</string>
    <string name="log_out_device">Log out device</string>
    <string name="update_your_password">Update your password</string>
    <string name="type_your_old_password_to_change">Type your old password to change</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="delete_pin">Delete PIN</string>
    <string name="update_pin">Update PIN</string>
    <string name="prove_your_action">Prove your action</string>
    <string name="type_pin_for_accept_your_action">Type PIN for accept your action</string>
    <string name="add_payment_method">Add payment method</string>
    <string name="credit_card">Credit card</string>
    <string name="coupons">Coupons</string>
    <string name="edit">Edit</string>
    <string name="expiration">Expiration</string>
    <string name="add">Add</string>
    <string name="card_holder">Card holder</string>
    <string name="card_number">Card number</string>
    <string name="expiration_date">Expiration date</string>
    <string name="cvc_cvv">CVC/CVV</string>
    <string name="save_card">Save card</string>
    <string name="add_coupon">Add coupon</string>
    <string name="save_changes">Save changes</string>
    <string name="delete_card">Delete card</string>
    <string name="add_new">Add new</string>
    <string name="payment_added_successfully">You have successfully add new payment method.</string>
    <string name="manage_all_notifications">Manage all Notifications</string>
    <string name="turn_on_all_notifications">Turn on all notifications</string>
    <string name="messages">Messages</string>
    <string name="push_notification">Push Notification</string>
    <string name="receive_notifications_via_app">Recevice notifications via app</string>
    <string name="receive_notifications_via_email">Receive notifications via email</string>
    <string name="text_messages">Text messages</string>
    <string name="receive_notifications_via_mobile_phone">Receive notifications via mobile phone</string>
    <string name="promotions">Promotions</string>
    <string name="reminders">Reminders</string>
    <string name="list">List</string>
    <string name="rate_client">Rate client</string>
    <string name="reschedule">Reschedule</string>
    <string name="bookings">Bookings</string>
    <string name="change_language">Change language</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="add_new_booking">Add new booking</string>
    <string name="choose_service">Choose service</string>
    <string name="duration">Duration</string>
    <string name="select_day">Select day</string>
    <string name="add_date_from_calendar">Add date from calendar</string>
    <string name="select_time">Select time</string>
    <string name="add_time_from_calendar">Add time from calendar</string>
    <string name="description">Description</string>
    <string name="comments">Comments</string>
    <plurals name="document">
        <item quantity="one">Document</item>
        <item quantity="other">Documents</item>
    </plurals>
    <string name="add_your_certificate_here">Add your\ncertificate here</string>
    <string name="add_your_document_here">Add your document here</string>
    <string name="or_click_to_browse">or click to browse</string>
    <string name="choose_file">Choose a file</string>
    <string name="fill_the_field">Fill the field</string>
    <string name="user_not_found">User not found</string>
    <string name="invalid_pin">Invalid pin</string>
    <string name="socket_exception">Socket exception</string>
    <string name="unknown_error">Unknown error</string>
    <string name="timeout_exception">Servis timout exception</string>
    <string name="data_parse_error">Data parse error</string>
    <string name="ssl_exception">Certificate exception (ssl). My be your device date wrong or no internet</string>
    <string name="mins">mins</string>
    <string name="price_not_defined">Price not defined</string>
    <string name="time_not_defined">Time not defined</string>
    <string name="language_not_defined">Language not defined</string>
    <string name="location_not_defined">Location not defined</string>
    <string name="from">From</string>
    <string name="not_found_lawyers">Not found lawyers</string>
    <string name="lawyer_profile">Lawyer profile</string>
    <string name="activate_fingerprint">Activate fingerprint</string>
    <string name="activate_fingerprint_info">Do you want to activate fingerprint to enter app?</string>
    <string name="token_expired_message">Please refresh page!</string>
    <string name="working_hours_list">Working hours list</string>
    <string name="category_list">Category list</string>
    <string name="sure_turn_on_all_notifications">Are you sure to TURN ON all notifications?</string>
    <string name="sign_up">Sign up</string>
</resources>