<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dimen16"
        android:paddingTop="@dimen/dimen16"
        android:paddingEnd="@dimen/dimen16"
        android:src="@drawable/ic_back_rounded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingLeft="@dimen/dimen16"
            android:paddingRight="@dimen/dimen16">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvEnterOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/sf_pro_display_bold"
                android:text="@string/enter_the_one_time_code_sent_via_sms"
                android:textColor="@color/buttonTextColor"
                android:textSize="22sp"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvOtpSent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/the_code_was_sent_to"
                android:textColor="@color/tvTextColor1"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/tvEnterOtp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvNumberDoesNotBelongToYou"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/doesn_t_this_number_belong_to_you"
                android:textColor="@color/tvTextColor2"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/tvOtpSent" />

            <com.example.common.widgets.otp.CustomOtpView
                android:id="@+id/otpView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/buttonTextColor"
                app:bar_success_color="@color/green"
                app:height="56dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNumberDoesNotBelongToYou"
                app:length="6"
                app:otp_box_background="@drawable/rounded_background_with_gray_border_10"
                app:otp_box_background_success="@drawable/rounded_background_with_green_border"
                app:otp_text_size="17sp"
                app:width="50dp" />

            <com.example.common.widgets.buttons.CustomRoundedButton
                android:id="@+id/btnResendOtp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="@dimen/dimen16"
                android:fontFamily="@font/sf_pro_display_bold"
                android:text="@string/re_send_the_code"
                android:textColor="@color/buttonTextColor"
                app:layout_constraintTop_toBottomOf="@id/otpView"
                app:strokeColor="@color/gray2"
                app:strokeWidth="2dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
